[DEV][burhan.cabiroglu][implementation project structure process]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Airline Ticket App</string>
+    <string name="filter">Filtrele</string>
+    <string name="sort">Sırala</string>
 </resources>
