--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Airline Ticket App</string>
     <string name="filter">Filtrele</string>
     <string name="sort">Sırala</string>
+    <string name="one_direction">Tek Yön</string>
 </resources>
