[DEV][burhan.cabiroglu][implementation viewmodel data with view]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="two_way">Gidiş Dönüş</string>
     <string name="prev_day">Önceki Gün</string>
     <string name="next_day">Sonraki Gün</string>
+    <string name="directFlight">Direkt Uçuş</string>
+    <string name="nonDirectFlight">Aktarmalı</string>
+
 </resources>
